--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 About...
 --------
 
-			  Modemu Version 0.0
-			  ==================
+			 Modemu Version 0.0.1
+			 ====================
 				   
-		   Copyright (c) 1995 Toru Egashira
+		Copyright (c) 1995, 1996 Toru Egashira
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -102,8 +102,18 @@ Any Ideas?
 
 Bug fixes/reports, comments, suggestions and useful usage examples are
 welcome.  Send e-mails to:
-
+	toru@jms.jeton.or.jp (preferably), or
 	egashira@nwk.CL.nec.co.jp
-		(Toru Egashira =?ISO-2022-JP?B?GyRCOT5GLCEhRTAbKEo=?=)
 
-Messages in Japanese will get responses quicker.
+Messages in Japanese are of course welcome.
+
+
+History
+-------
+
+v0.0 (950406)
+ - Initial public release.
+
+v0.0.1 (960113)
+ - Fixed the "connect()-2: .." bug.
+   Merely the v0.0 of "fix1" applied, thus no new features are added.
