--- a/modemu.1
+++ b/modemu.1
@@ -361,7 +361,7 @@ Connecting attempt time limit in seconds.
 (20)
 .TP
 .B S12
-Escape sequence guard time in 50ths of a second. 
+Escape sequence guard time in 50ths of a second.
 (50)
 .\"
 .\"
@@ -388,7 +388,7 @@ telnet(1),
 .\"
 .SH BUGS
 .\"
-No dial-resriction, or blacklisting, capability.
+No dial-restriction, or blacklisting, capability.
 So using
 .B modemu
 maybe unlawful in some countries. B)
